Modified swagger docs and backend api with database type; Added different components router; Allowed user to create new product, and updated user information; Added dashboard content;
